erstmal fertig bis martin was dazu sagt

--- a/library.bib
+++ b/library.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Nikolaus Piccolotto at 2013-06-13 09:05:01 +0200 
+%% Created for Nikolaus Piccolotto at 2013-06-15 16:57:28 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Tufte1983,
+	Author = {Tufte, Edward R. and Graves-Morris, P.R.},
+	Date-Added = {2013-06-15 14:55:17 +0000},
+	Date-Modified = {2013-06-15 14:57:19 +0000},
+	Publisher = {Graphics Press},
+	Title = {The visual display of quantitative information},
+	Year = {1983}}
 
 @book{Mazza2009,
 	Annote = {Einf{\"u}hrung mit Beispielen},
@@ -106,7 +114,7 @@
 @inproceedings{Polowinski2013,
 	Annote = {Neueres VISO paper},
 	Author = {Polowinski, Jan and Voigt, Martin},
-	Booktitle = { Proceedings of the SIGCHI Conference on Human Factors in Computing Systems 2013 (CHI13)},
+	Booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems 2013 (CHI13)},
 	Date-Added = {2013-06-07 18:21:44 +0000},
 	Date-Modified = {2013-06-07 18:24:44 +0000},
 	Keywords = {cruise;viso},
